<resources>
    <string name="normal_theme" translatable="false">normal_theme</string>
    <string name="current_version">Current Version:</string>
    <string name="version_number">Version Number</string>
    <string name="font_size">Font Size</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm">OK</string>
    <string name="loginExpired">Another user has logged in with your same credentials, for security reason you will be logged out</string>
    <string name="sessionExpired">Session is expired, for security reason you will be logged out</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="download_cbk">Download CBK Mobile App from play Store</string>
    <string name="sender_id" translatable="false">689200307400</string>
    <string name="allow_finger_print" translatable="false">allow_finger_print</string>
    <string name="saved_pass" translatable="false">saved_pass</string>
    <string name="no_data">No Data</string>
    <string name="no_net">Couldn\'t connect to the server. Please check your network connection.</string>
    <string name="all_sectors">All sectors</string>
    <string name="all">All</string>
    <string name="not_loaded_yet">Stocks are not loaded yet. please wait and try again later</string>
    <string name="no_result_message">Sorry we could not find any match!</string>
    <string name="brokers_xml_1">http://www.ids-lb.com/iphone/FixBrokers.xml</string>
    <string name="brokers_xml_2">https://www.ids-support.com/iphone/fixbrokers.xml</string>
    <string name="beforekey">6aaac758332a8320840ac0e5f8fc28e2</string>
    <string name="bonds">Bonds</string>
    <string name="regId" translatable="false">regId</string>
    <string name="registered" translatable="false">false</string>
    <string name="afterkey" translatable="false" />
    <string name="instrument_title">Instrument</string>
    <string name="NMS">NMS</string>
    <string name="symbol">Stock</string>
    <string name="stocks_no">Stocks No</string>
    <string name="stocks_name">Stock Name</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="almowazi">Unlisted</string>
    <string name="change_percent">Change%</string>
    <string name="time">Time</string>
    <string name="tops">Tops</string>
    <string name="summary">Summary</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="amount">Amount</string>
    <string name="hi_limit">Hi Limit</string>
    <string name="high">High</string>
    <string name="is_islamic">Is Islamic</string>
    <string name="last">Last</string>
    <string name="low">Low</string>
    <string name="low_limit">Low Limit</string>
    <string name="open">Open</string>
    <string name="stock_id">Stock</string>
    <string name="error">Error</string>
    <string name="save_success">Stock Saved.</string>
    <string name="delete_success">Stock Deleted.</string>
    <string name="save">OK</string>
    <string name="submit">Submit</string>
    <string name="review_button">Review</string>
    <string name="trades_total_title">Total</string>
    <string name="trades_commission_title">Brokerage</string>
    <string name="trades_total_cost_title">Overall Total</string>
    <string name="duration_type_title">Duration:</string>
    <string name="price_choose_title">Limit</string>
    <string name="market_price_title">Market Price</string>
    <string name="t_quantity_title">Qty:</string>
    <string name="Fill">Fill</string>
    <string name="t_price_title">Price:</string>
    <string name="sell_title">Sell</string>
    <string name="buy_title">Buy</string>
    <string name="high_limit">High</string>
    <string name="type">Type</string>
    <string name="trading_value">Trading Value</string>
    <string name="trades_last_ask_title">Ask</string>
    <string name="trades_last_bid_title">Bid</string>
    <string name="error_purchase_power">You have insufficient balance to do this deal </string>
    <string name="error_share_count">Required quantity for this stock is not available</string>
    <string name="stock_last_price_title">Market Price</string>
    <string name="last_price_title">Last Price</string>
    <string name="close_title">Closing</string>
    <string name="close">Close</string>
    <string name="quantity_title">Qty</string>
    <string name="executed_quantity_title">Executed</string>
    <string name="action">Action</string>
    <string name="new_account">New Account</string>
    <string name="status">Status</string>
    <string name="trades_page_title">Trade Execution</string>
    <string name="trades_confirmation_page_title">Trade Confirmation</string>
    <string name="stock_trading_status">Stock Trading Status</string>
    <string name="trades">Trades</string>
    <string name="volume">Volume</string>
    <string name="volume1">Volume</string>
    <string name="volume_ask">Volume Ask</string>
    <string name="volume_bid">Volume Bid</string>
    <string name="ask_quantity">Ask Qty.</string>
    <string name="bid_quantity">Bid Qty.</string>
    <string name="ask_number">Ask no.</string>
    <string name="bid_number">Bid no.</string>
    <string name="price">Price</string>
    <string name="current_price">Current Price</string>
    <string name="low_price">Low Price</string>
    <string name="ask_volume">Ask Volume</string>
    <string name="bid_volume">Bid Volume</string>
    <string name="portfolio_number">Portfolio Number</string>
    <string name="date">Date</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="quantity">Qty</string>
    <string name="place_order">Place Order</string>
    <string name="add_order">Add Order</string>
    <string name="ersal_order">Send Order</string>
    <string name="update_order">Update Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="activate_order">Activate</string>
    <string name="sector_name">Name</string>
    <string name="error_code">We have some trouble , Code error : </string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password :</string>
    <string name="old_password">Old password :</string>
    <string name="verify_password">Verify password :</string>
    <string name="PasswordNoCtrlChr">Password policy: Must not contain the following characters</string>
    <string name="PasswordLength">Password policy: Length should be between</string>
    <string name="PasswordContainSpaces">Password policy: Space is not allowed</string>
    <string name="PasswordNotSortedAlphab">Password policy: Consecutive characters are not allowed</string>
    <string name="PasswordNotSortedNumeric">Password policy: Consecutive number are not allowed</string>
    <string name="PasswordNo2RepeatedChar">Password policy: Must not contain 3 Repeated Characters or numbers</string>
    <string name="PasswordAlphanumeric">Password policy: Must be number and charactere</string>
    <string name="ComplexPassOff1">Password policy:\n  * Must not contain the following characters.\n  * Length should be between </string>
    <string name="ComplexPassOff2"> characters\n  * Space is not allowed</string>
    <string name="ComplexPassOn">\n  * Consecutive characters and number are not allowed \n  * Must not contain 3 Repeated Characters or numbers</string>
    <string name="and"> and </string>
    <string name="errorlogin">Please fill username and password</string>
    <string name="errorupdate">Please fill All Field</string>
    <string name="errorVerify">The New Password and Verify Password is not identical</string>
    <string name="updatesuccessful">the password is update successful</string>
    <string name="updatesuccessfulPin">the pin is update successful</string>
    <string name="trading_number">Trading number</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="change_language">Language Settings</string>
    <string name="push_notification">Notifications</string>
    <string name="proceed">Proceed</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registerOnAlMowazi">Register via AlMowazi</string>
    <string name="updateOnAlMowazi">Update via AlMowazi</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="reactivate_account">Re-Activate Account</string>
    <string name="account_statement_title">Account statement</string>
    <string name="pdf_kcc_text">Account Statement as Rep200</string>
    <string name="login_contactus">Contact Us</string>
    <string name="login_board">Board of Directors</string>
    <string name="login_terms">CMA Announcements</string>
    <string name="login_about">About Us</string>
    <string name="ms_open"> Open</string>
    <string name="ms_closed"> Closed</string>
    <string name="ms_preopen">Pre Open</string>
    <string name="ms_startofday">Start Of Day</string>
    <string name="ms_acceptance">Acceptance</string>
    <string name="ms_closing">Closing Auction</string>
    <string name="ms_Inquiry">Inquiry</string>
    <string name="trading_info">Trading Info</string>
    <string name="membership_terms">Membership terms</string>
    <string name="market_state_title">Market Status:</string>
    <string name="market_time_title">Market Time:</string>
    <string name="last_weight_title">Weight Index</string>
    <string name="change_weight_title">Weight change</string>
    <string name="change_weight_percent_title">Change%</string>
    <string name="value_weight_title">Amount</string>
    <string name="trades_title">Trades</string>
    <string name="amount_title">Value</string>
    <string name="volume_title">Volume</string>
    <string name="market_index">Market Index</string>
    <string name="sectors">Sectors</string>
    <string name="stock">Stocks</string>
    <string name="stock_btn">Stocks</string>
    <string name="time_sales">Trades</string>
    <string name="top_trades">Trades</string>
    <string name="top_value">Value</string>
    <string name="top_gainer">Gainers</string>
    <string name="top_looser">Losers</string>
    <string name="top_traded">Volume</string>
    <string name="portfolio">Portfolio</string>
    <string name="orders">Orders</string>
    <string name="news">News</string>
    <string name="favorite">Favorites</string>
    <string name="links">Quick Links</string>
    <string name="order_book">Order Book </string>
    <string name="register">Register</string>
    <string name="change_title">Change</string>
    <string name="price_title">Price</string>
    <string name="stock_name_title">Stock</string>
    <string name="session_title">Session</string>
    <string name="fs_symbol">Symbol</string>
    <string name="fs_num">Co No.</string>
    <string name="fs_date">Date</string>
    <string name="fs_org_qtty">Original Qty</string>
    <string name="fs_rem_qtty">Rem. Qty</string>
    <string name="fs_cost">Cost</string>
    <string name="fs_bprice">B. Price</string>
    <string name="fs_rem_cost">Rem. Cost</string>
    <string name="fs_due_date">Due Date</string>
    <string name="mowazi_company">Companies</string>
    <string name="mowazi_companies">Companies\' Info</string>
    <string name="mowazi_orderAsk">Ask</string>
    <string name="mowazi_orderedQuantity">Original shares</string>
    <string name="mowazi_offeredQuantity">Offered Qty</string>
    <string name="lastprice">Last price:</string>
    <string name="bid_price">Bid Price</string>
    <string name="ask_price">Ask Price</string>
</resources>