<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="?attr/colorMedium"
    android:clipToPadding="false"
    android:visibility="gone"
    android:gravity="center_vertical"
    android:id="@+id/linearStockQuotationHeaderGigOld"
    android:orientation="horizontal">
    <!--android:padding="0dp"-->

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="@dimen/trades_button_width"
        android:layout_height="@dimen/trades_button_height"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/mini_margin"
        android:background="@drawable/tradebuttondrawable"
        android:onClick="searchStocks"
        android:scaleType="fitCenter"

        android:src="@drawable/sectors"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvStockGig"
            android:textSize="@dimen/xSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="@dimen/mini_padding"
            android:text="@string/stock_name_title"
            android:textColor="?attr/colorValues" />

        <TextView
            android:id="@+id/tvSessionName"
            android:textSize="@dimen/xSmall"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:padding="@dimen/mini_padding"
            android:text="@string/session_title"
            android:textColor="?attr/colorValues" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvBidQty"
        android:textSize="@dimen/xSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="@dimen/mini_padding"
        android:text="@string/bid_quantity"
        android:textColor="?attr/colorValues" />

    <TextView
        android:id="@+id/tvPrice"
        android:textSize="@dimen/xSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:padding="@dimen/mini_padding"
        android:text="@string/price_title"
        android:textColor="?attr/colorValues" />
    <TextView
        android:id="@+id/tvBidPrice"
        android:textSize="@dimen/xSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center_horizontal"
        android:padding="@dimen/mini_padding"
        android:text="@string/bid_price"
        android:textColor="?attr/colorValues" />

    <TextView
        android:id="@+id/tvLastPrice"
        android:textSize="@dimen/xSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center_horizontal"
        android:padding="@dimen/mini_padding"
        android:text="@string/lastprice"
        android:textColor="?attr/colorValues" />

    <TextView
        android:id="@+id/tvAskPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="@dimen/mini_padding"
        android:text="@string/ask_price"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/xSmall" />


    <TextView
        android:id="@+id/tvAskQty"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/mini_padding"
        android:paddingBottom="@dimen/mini_padding"
        android:text="@string/ask_quantity"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/xSmall" />
    <!--android:layout_weight="0.29"-->


</LinearLayout>