<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvCompanyItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mowazi_company"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvOrderAskItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.8"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mowazi_orderAsk"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvOrderQuantityItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.8"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mowazi_orderedQuantity"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvOrderPriceItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.8"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/price"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvOfferQuantityItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.8"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mowazi_offeredQuantity"
        android:textSize="10sp" />


</LinearLayout>