<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mowazi_dark_blue"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvCompanyHeader"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.4"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/mowazi_companies"
        android:textColor="@color/white"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvQuantityHeader"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/quantity"
        android:textColor="@color/white"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvPriceHeader"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.4"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvDateHeader"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="@dimen/small" />

</LinearLayout>