<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="?attr/colorMedium"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/mini_padding"
    android:paddingTop="0sp"
    android:paddingRight="@dimen/mini_padding"
    android:paddingBottom="0sp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSymbolHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:text="@string/stock_name_title"
            android:textColor="?attr/colorValues"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/tvInstruments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:text="@string/instrument_title"
            android:textColor="?attr/colorValues"
            android:textSize="@dimen/small"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPriceHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="0.9"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/price"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvQuantityHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="0.9"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/quantity_title"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvExecutedQuantityHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1.2"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/executed_quantity_title"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/small" />



    <!--old version-->
    <TextView
        android:id="@+id/tvActionHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/mini_padding"
        android:text="@string/action"
        android:visibility="invisible"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvStatusHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1.1"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/mini_padding"
        android:text="@string/status"
        android:textColor="?attr/colorValues"
        android:textSize="@dimen/small" />



</LinearLayout>